fixed horizontal scroll

--- a/src/styles/blocks/categories.scss
+++ b/src/styles/blocks/categories.scss
@@ -53,12 +53,10 @@
         box-shadow: $main-text-color 3px -3px 10px;
       }
 
-      @include hover(transform, scale(1.1));
+      @include hover(transform, scale(1.05));
     }
 
     &--square {
-      @include hover(transform, scale(1.2));
-
       height: 0;
       padding-bottom: 100%;
 
@@ -75,7 +73,7 @@
         box-shadow: $main-text-color 3px -3px 10px;
       }
 
-      @include hover(transform, scale(1.1));
+      @include hover(transform, scale(1.05));
     }
   }
 
