--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  margin-bottom: 100px;
+  margin-bottom: 10%;
 
   &__img {
     height: 200px;
