--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,7 +13,7 @@
 
   &__title {
     display: inline-block;
-    margin: 0;
+
     @include accentFontStyle;
 
     @include onTablet {
@@ -24,7 +24,7 @@
       text-shadow: #f8f8fa 3px -3px 10px;
     }
 
-    @include hover(transform, scale(1.2));
+    @include hover(transform, scale(1.05));
   }
 
   &__bottom {
