--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,7 +5,7 @@
 
   &__body {
     margin: 0;
-    min-width: 320px;
+    min-width: 100%;
   }
 
   &__menu {
