--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -8,7 +8,7 @@
       box-shadow: $main-text-color 3px -3px 10px;
     }
 
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.05));
   }
 
   &__title {
